--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 
     <footer class="text-center text-muted py-4 mt-auto">
         <div class="container">
-            <p>&copy; 2024-2025 - Sistema Doce Controle para Confeitando com Artes por Edneuza Pereira</p>
+            <p>&copy; 2024-2025 - Sistema de Controle para Confeitando com Artes por Edneuza Pereira</p>
         </div>
     </footer>
     
