--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
         <div class="row justify-content-center text-center mb-5">
             <div class="col-md-8">
                <img src="{{ url_for('static', filename='images/logo_segundo.png') }}"  class="img-fluid mb-4" style="max-width: 200px; border-radius: 50%;">
-                <h1 class="display-4">Bem-vinda Edneuza Pereira </h1>
-                <p class="lead text-muted">Seu sistema de gestão para a Confeitando com Artes ❤️</p>
+                <h1 class="display-4">Bem-vinda Edneuza Pereira ❤️</h1>
+                <p class="lead text-muted">Seu sistema de gestão para a Confeitando com Artes </p>
             </div>
         </div>
 
