--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
            
 <a class="navbar-brand" href="{{ url_for('index') }}">
 
-    <img src="{{ url_for('static', filename='images/logo_principal.png') }}"  height="30" class="d-inline-block align-text-top me-2">
+    <img src="{{ url_for('static', filename='images/logo_principal.png') }}"  height="50" class="d-inline-block align-text-top me-2">
     Confeitando com Artes
 </a>
 
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Início</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Início 😁</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('gerenciar_ingredientes') }}">Ingredientes</a>
