fix: criando graficos de estoque, baixa estoque e controle de estoque, dando cores de baixo, medio e alto estoque em ingredientes, paginação dos ingredientes.

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <a class="navbar-brand" href="{{ url_for('index') }}">
 
     <img src="{{ url_for('static', filename='images/logo_principal.png') }}"  height="50" class="d-inline-block align-text-top me-2">
-    Confeitando com Artes
+    Confeitando com Arte
 </a>
 
 
@@ -29,13 +29,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">Início 😁</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Início </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('gerenciar_ingredientes') }}">Ingredientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('gerenciar_formas') }}">Formas</a>
+                        <a class="nav-link" href="{{ url_for('gerenciar_formas') }}">Formas </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('gerenciar_fichas_tecnicas') }}">Fichas Técnicas</a>
