--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <div class="row justify-content-center text-center mb-4">
             <div class="col-md-8">
                 <img src="{{ url_for('static', filename='images/logo_segundo.png') }}" alt="Logo Confeitando com Artes" class="img-fluid mb-4" style="max-width: 150px; border-radius: 50%;">
-                <h1 class="display-5">Bem-vinda, Edneuza Pereira ❤️</h1>
+                <h1 class="display-5">Bem-vinda, Edneuza Silva ❤️</h1>
                 <p class="lead text-muted">Seu sistema de gestão para a Confeitando com Arte</p>
             </div>
         </div>
