--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('gerenciar_configuracoes') }}">Configurações</a>
                     </li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('gerenciar_vendas') }}">Vendas</a>
+                    </li>
                 </ul>
             </div>
         </div>
