--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,13 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('gerenciar_vendas') }}">Vendas</a>
                     </li>
+                    <ul class="navbar-nav ms-auto">
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('logout') }}">
+            <i class="bi bi-box-arrow-right"></i> Sair
+        </a>
+    </li>
+</ul>
                 </ul>
             </div>
         </div>
