--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,9 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('gerenciar_vendas') }}">Vendas</a>
                     </li>
+                    <li class="nav-item">
+    <a class="nav-link" href="{{ url_for('novo_orcamento') }}">Gerar Orçamento</a>
+</li>
                     <ul class="navbar-nav ms-auto">
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('logout') }}">
