--- a/templates/index.html
+++ b/templates/index.html
@@ -43,10 +43,10 @@
         <div class="col-lg-2 col-md-6 mb-4">
             <div class="card shadow-sm h-100">
                 <div class="card-body d-flex flex-column align-items-center justify-content-center text-center">
-                    <i class="bi bi-rulers text-success mb-2" style="font-size: 2.5em;"></i>
+                    <i class="bi bi-rulers text-warning mb-2" style="font-size: 2.5em;"></i>
                     <h5 class="card-title">Formas</h5>
                     <p class="card-text small text-muted">Cadastre e organize suas formas de bolo.</p>
-                    <a href="{{ url_for('gerenciar_formas') }}" class="btn btn-success btn-sm mt-auto">Acessar</a>
+                    <a href="{{ url_for('gerenciar_formas') }}" class="btn btn-warning btn-sm mt-auto">Acessar</a>
                 </div>
             </div>
         </div>
@@ -63,6 +63,19 @@
         </div>
     </div>
 </div>
+<div class="col-lg-2 col-md-6 mb-4">
+    <div class="card shadow-sm h-100">
+        <div class="card-body d-flex flex-column align-items-center justify-content-center text-center">
+            <i class="bi bi-file-earmark-text text-secondary mb-2" style="font-size: 2.5em;"></i>
+            <h5 class="card-title">Orçamento</h5>
+            <p class="card-text small text-muted">
+                Informe suas vendas, acompanhe seus lucros e custos
+            </p>
+            <a href="{{ url_for('gerar_pdf_orcamento') }}" class="btn btn-secondary btn-sm mt-auto">Acessar</a>
+        </div>
+    </div>
+</div>
+
 
     </div>
 
